--- a/Software/Smartknob/lib/MT6701/CMakeLists.txt
+++ b/Software/Smartknob/lib/MT6701/CMakeLists.txt
@@ -6,4 +6,4 @@ target_sources(MT6701 INTERFACE
 
 target_include_directories(MT6701 INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 
-target_link_libraries(MT6701 INTERFACE hardware_spi)
+target_link_libraries(MT6701 INTERFACE hardware_spi hardware_gpio)
