--- a/Software/Smartknob/lib/MCP3564R/CMakeLists.txt
+++ b/Software/Smartknob/lib/MCP3564R/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(MCP3564R INTERFACE)
 
 target_sources(MCP3564R INTERFACE
     ${CMAKE_CURRENT_LIST_DIR}/MCP3564R.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/MCP3564R_regs.h
 )
 
 target_include_directories(MCP3564R INTERFACE ${CMAKE_CURRENT_LIST_DIR})
