Fix FIR class, add PID and implement detents

--- a/Software/Smartknob/lib/FIR/CMakeLists.txt
+++ b/Software/Smartknob/lib/FIR/CMakeLists.txt
@@ -1,8 +1,6 @@
 add_library(FIR INTERFACE)
 
-target_sources(FIR INTERFACE
-    ${CMAKE_CURRENT_LIST_DIR}/FIR.cpp
-)
+target_sources(FIR INTERFACE)
 
 target_include_directories(FIR INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 
